[package]
name = "txreader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
structopt = "0.3.21"
anyhow = "1.0.41"
serde = { version = "1.0.126", features = ["derive"] }
matches = "0.1.8"
rayon = "1.5.1"