[package]
name = "txreader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
structopt = "0.3.21"
anyhow = "1.0.41"
serde = { version = "1.0.126", features = ["derive"] }
rayon = "1.5.1"
tempfile = "3.2.0"
log = "0.4.0"
env_logger = "0.8.4"
common_macros = "0.1.1"
rust_decimal = "1.15.0"
rust_decimal_macros = "1.15.0"